--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
-    "react-native-signature-canvas": "^4.7.2"
+    "react-native-signature-canvas": "^4.7.2",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
