--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-signature-canvas": "^4.7.2",
+    "react-native-wheel-color-picker": "^1.3.1",
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
